# arcanna-mcp-server

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dockerhub_push.yml
.github/workflows/: build_image_and_package.yml  dockerhub_push.yml
src/arcanna_mcp/: __init__.py  constants.py  environment.py  server.py
src/arcanna_mcp/models/: base_resource.py  filters.py  generic_events.py
src/arcanna_mcp/tools/: __init__.py  custom_code_block.py  generic_events.py  health_check.py  resources.py  system.py
src/arcanna_mcp/utils/: exceptions_handler.py  tool_exception_response.py
src/arcanna_mcp_server/: __init__.py  constants.py  environment.py  server.py
src/arcanna_mcp_server/models/: base_resource.py  filters.py  generic_events.py  metrics.py  resource_type.py
src/arcanna_mcp_server/models/agentic/: agentic_workflow_summary.py  env_variable.py  function_call.py  function_response.py  run_workflow_response.py  workflow_event.py  workflow_settings.py
src/arcanna_mcp_server/prompts/: __init__.py  agentic_code_instructions.py
src/arcanna_mcp_server/tools/: __init__.py  agentic.py  custom_code_block.py  events.py  generic_events.py  health_check.py  jobs.py  metrics.py  rag.py  resources.py  resources_management.py  search.py  system.py
src/arcanna_mcp_server/utils/: agentic_model_env_variables_map.py  exceptions_handler.py  get_data.py  post_data.py  tool_scopes.py
