[project]
name = "arcanna-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.1",
    "requests>=2.32.3",
    "fastapi>=0.115.6",
    "starlette>=0.46.0",
    "uv>=0.6.9",
    "uvx>=2.5.1"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
arcanna-mcp = "arcanna_mcp:main"
