[project]
name = "arcanna-mcp-server"
authors = [
  { name="DevSiscale", email="dev@siscale.com" },
]
version = "0.1.11"
description = "The Arcanna MCP server allows user to interact with Arcanna's AI use cases through the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.1",
    "requests>=2.32.3",
    "fastapi>=0.115.6",
    "starlette>=0.46.0",
    "uv>=0.6.9"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
arcanna-mcp-server = "arcanna_mcp_server:main"

[project.urls]
homepage = "https://github.com/siscale/arcanna-mcp-server"
